--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
 				<configuration>
 					<deploymentType>HYBRID</deploymentType>
 					<target>${target}</target>  <!-- Jenkins에서 넘겨주는 값 -->
-					<applicationName>dtestjenkins</applicationName>
+					<!-- <applicationName>dtestjenkins</applicationName> -->
+					<applicationName>deploytest-jenkins-1</applicationName> <!-- 베포된 애플리케이션 이름으로 변경 -->
 					<environment>sandbox</environment>
 					<agentDeployment>
 						<uri>${mule.deploy.uri}</uri>   <!-- Jenkins에서 넘겨주는 값 -->
