--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,16 @@
 				<extensions>true</extensions>
 				<!-- add Runtime Manager Agent Deployment setting  start -->
 				<configuration>
+				<!-- 
 					<agentDeployment>
-						<uri>${mule.deploy.uri}</uri>   <!-- Jenkins에서 넘겨주는 값 -->
-					</agentDeployment>
+						<uri>${mule.deploy.uri}</uri>   
+					</agentDeployment>  -->
+					<deployment>
+						<provider>mule</provider>
+						<target>Azure-AWS-Cluster</target>
+						<environment>Sandbox</environment>
+						<applicationName>dtestjenkins</applicationName>
+					</deployment>
 				</configuration>
 				<!-- add Runtime Manager Agent Deployment setting  end -->
 			</plugin>	
