--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
 
 		<app.runtime>4.8.3</app.runtime>
 		<mule.maven.plugin.version>4.3.0</mule.maven.plugin.version>
-		<mule.home.test></mule.home.test>
+		<anypoint.username>hyekyung</anypoint.username>
+		<anypoint.password>KUkjt@RuU4s9!p$</anypoint.password>
+		<anypoint.environment>Sandbox</anypoint.environment>
+		<anypoint.businessGroup>KD Test Group</anypoint.businessGroup>
+		<anypoint.target>Azure-AWS-Cluster</anypoint.target>
+		<app.name>deploytest-jenkins-1</app.name>
 		<tags/>
 		<categories>[]</categories>
 		<fields>[]</fields>
@@ -37,8 +42,16 @@
 				<extensions>true</extensions>
 				<!-- add Runtime Manager Agent Deployment setting  start -->
 				<configuration>
+					<anypointPlatform>
+						<username>${anypoint.username}</username>
+						<password>${anypoint.password}</password>
+						<environment>${anypoint.environment}</environment>
+						<businessGroup>${anypoint.businessGroup}</businessGroup>
+					</anypointPlatform>
 					<agentDeployment>
-						<uri>${mule.deploy.uri}</uri>   
+					<!-- <uri>${mule.deploy.uri}</uri>    -->
+						<target>${anypoint.target}</target>
+						<applicationName>${app.name}</applicationName>
 					</agentDeployment>  					
 				</configuration>
 				<!-- add Runtime Manager Agent Deployment setting  end -->
@@ -65,19 +78,6 @@
 		          		</configuration>
 		        	</execution>
 		      	</executions>
-		    </plugin>
-		    <!-- 배포 플러그인 -->		
-		    <plugin>
-		    	<groupId>org.mule.tools.maven</groupId>
-		    	<artifactId>mule-maven-plugin</artifactId>
-		    	<version>${mule.maven.plugin.version}</version>
-		    	<executions>
-		    		<execution>
-		    			<goals>
-		    				<goal>deploy</goal>
-		    			</goals>
-		    		</execution>
-		    	</executions>
 		    </plugin>
 		</plugins>
 	</build>
