--- a/pom.xml
+++ b/pom.xml
@@ -42,15 +42,10 @@
 				<extensions>true</extensions>
 				<!-- add Runtime Manager Agent Deployment setting  start -->
 				<configuration>
-					<deployTarget>
-				        <type>standalone</type>
-				        <standaloneDeployment>
-				            <uri>http://${mule.server}:${mule.port}/</uri>
-				            <username>${anypoint.username}</username>
-				            <password>${anypoint.password}</password>
-				            <applicationName>${app.name}</applicationName>
-				        </standaloneDeployment>
-				    </deployTarget>		
+					<agentDeployment>
+						<uri>http://${mule.server}:${mule.port}/</uri>
+						<applicationName>${app.name}</applicationName>
+					</agentDeployment>			  
 				</configuration>
 				<!-- add Runtime Manager Agent Deployment setting  end -->
 			</plugin>	
